hard-gists/125559/run.log
=== Docker Run Log for 125559 ===
Started at: Mi 29. Okt 12:02:21 CET 2025

[2025-10-29 12:02:21] START: Running container for 125559
[2025-10-29 12:02:22] SUCCESS: Container 4936a7b7f76f7f42faf686d30db6ffa1db7428d0857c03e856ba578358b5f4f1 started for 125559
=== Container logs for 125559 ===
  File "/snippet.py", line 128
    print name, ' ', value
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 125559 ===
[2025-10-29 12:02:24] INFO: Container 4936a7b7f76f7f42faf686d30db6ffa1db7428d0857c03e856ba578358b5f4f1 has stopped
